--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^7.6.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "firebase": "^4.12.0",
     "focus-visible": "4.0.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
@@ -47,8 +48,10 @@
     "react-dev-utils": "5.0.0",
     "react-dom": "^16.2.0",
     "react-redux": "5.0.6",
+    "react-redux-firebase": "^2.0.5",
     "redux": "^3.7.2",
     "redux-devtools-extension": "2.13.2",
+    "redux-form": "^7.3.0",
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
