--- a/package.json
+++ b/package.json
@@ -5,54 +5,55 @@
   "homepage": "https://www.thefullresolution.com/temperature",
   "dependencies": {
     "autoprefixer": "7.2.5",
-    "axios": "0.17.1",
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.1",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-react": "6.24.1",
     "babel-preset-react-app": "3.1.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "chart.js": "2.7.1",
     "css-loader": "0.28.9",
-    "cypress": "^1.4.2",
+    "cypress": "1.4.2",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.0.1",
-    "eslint": "4.16.0",
-    "eslint-config-react-app": "^2.1.0",
+    "eslint": "4.19.1",
+    "eslint-config-react-app": "2.1.0",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-cypress": "^2.0.1",
+    "eslint-plugin-cypress": "2.0.1",
     "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-import": "2.9.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-react": "7.7.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
-    "firebase": "^4.12.0",
-    "focus-visible": "4.0.1",
+    "firebase": "4.12.0",
+    "focus-visible": "4.1.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "immutability-helper": "2.6.4",
     "jest": "20.0.4",
-    "node-sass": "4.7.2",
+    "lodash-es": "4.17.7",
+    "node-sass": "4.8.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.3.0",
     "postcss-loader": "2.0.10",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
-    "react": "^16.2.0",
+    "react": "16.2.0",
     "react-chartjs-2": "2.7.0",
     "react-dev-utils": "5.0.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "5.0.6",
-    "react-redux-firebase": "^2.0.5",
-    "redux": "^3.7.2",
+    "react-dom": "16.2.0",
+    "react-redux": "5.0.7",
+    "react-redux-firebase": "2.0.5",
+    "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
     "redux-devtools-extension": "2.13.2",
-    "redux-form": "^7.3.0",
+    "redux-form": "7.3.0",
     "redux-thunk": "2.2.0",
+    "reselect": "^3.0.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
