--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "focus-visible": "4.1.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "immutability-helper": "^2.6.6",
     "jest": "20.0.4",
     "lodash-es": "4.17.7",
     "node-sass": "4.8.3",
