--- a/package.json
+++ b/package.json
@@ -48,15 +48,15 @@
     "react-dev-utils": "5.0.0",
     "react-dom": "16.2.0",
     "react-redux": "5.0.7",
-    "react-redux-firebase": "2.0.5",
+    "react-redux-firebase": "2.0.6",
     "react-router-dom": "4.2.2",
     "react-toggled": "^1.2.6",
     "redux": "3.7.2",
     "redux-devtools-extension": "2.13.2",
     "redux-form": "7.3.0",
     "redux-thunk": "2.2.0",
-    "reselect": "^3.0.1",
-    "sass-loader": "6.0.6",
+    "reselect": "3.0.1",
+    "sass-loader": "6.0.7",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -67,17 +67,14 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js && concurrently \"node scripts/server-build.js\" \"cypress run --config baseUrl=http://localhost:8080 \"",
+    "build":
+      "node scripts/build.js && concurrently \"node scripts/server-build.js\" \"cypress run --config baseUrl=http://localhost:8080 \"",
     "cypress:open": "cypress open",
     "test": "cypress run"
   },
   "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
+    "collectCoverageFrom": ["src/**/*.{js,jsx,mjs}"],
+    "setupFiles": ["<rootDir>/config/polyfills.js"],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
       "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
@@ -87,11 +84,10 @@
     "transform": {
       "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)":
+        "<rootDir>/config/jest/fileTransform.js"
     },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
+    "transformIgnorePatterns": ["[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
@@ -106,21 +102,14 @@
     ]
   },
   "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "presets": ["react-app"]
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "plugin:react/recommended"
-    ],
+    "extends": ["react-app", "plugin:react/recommended"],
     "rules": {
       "no-extend-native": 0
     },
-    "plugins": [
-      "cypress"
-    ],
+    "plugins": ["cypress"],
     "env": {
       "cypress/globals": true
     }
