--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "chalk": "1.1.3",
     "chart.js": "2.7.1",
     "css-loader": "0.28.9",
-    "cypress": "1.4.2",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.0.1",
     "eslint": "4.19.1",
@@ -33,7 +32,7 @@
     "focus-visible": "4.1.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "immutability-helper": "^2.6.6",
+    "immutability-helper": "2.6.6",
     "jest": "20.0.4",
     "lodash-es": "4.17.7",
     "node-sass": "4.8.3",
@@ -41,7 +40,7 @@
     "postcss-flexbugs-fixes": "3.3.0",
     "postcss-loader": "2.0.10",
     "promise": "8.0.1",
-    "prop-types": "^15.6.0",
+    "prop-types": "15.6.0",
     "raf": "3.4.0",
     "react": "16.2.0",
     "react-chartjs-2": "2.7.0",
@@ -50,7 +49,7 @@
     "react-redux": "5.0.7",
     "react-redux-firebase": "2.0.6",
     "react-router-dom": "4.2.2",
-    "react-toggled": "^1.2.6",
+    "react-toggled": "1.2.6",
     "redux": "3.7.2",
     "redux-devtools-extension": "2.13.2",
     "redux-form": "7.3.0",
